--- a/css/stellar.css
+++ b/css/stellar.css
@@ -1,4 +1,3 @@
-@import url(font-awesome.min.css);
 @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400";
 
 /*
@@ -99,11 +98,11 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: #00B251;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
+		background-color: #09AFB2;
+		background-image: -moz-linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
+		background-image: -webkit-linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
+		background-image:  -ms-linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
+		background-image: linear-gradient(45deg, #089C75 15%, #09AFB2 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -120,7 +119,7 @@ input, select, textarea {
 /* Type */
 
 	body {
-		background-color: #00B251;
+		background-color: #09AFB2;
 		color: rgba(255, 255, 255, 0.65);
 	}
 
@@ -2162,7 +2161,7 @@ input, select, textarea {
 
 		select option {
 			color: #ffffff;
-			background: #00B251;
+			background: #09AFB2;
 		}
 
 	input[type="checkbox"] + label,
@@ -2180,7 +2179,7 @@ input, select, textarea {
 	input[type="radio"]:checked + label:before {
 		background-color: #ffffff;
 		border-color: #ffffff;
-		color: #00B251;
+		color: #09AFB2;
 	}
 
 	input[type="checkbox"]:focus + label:before,
