Get account name from robin hood account screen. Some basic sanitization. Error color. Re adding `mint-force-sync`, may need to be removed on merge

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -32,3 +32,7 @@ input[type="checkbox"]:checked + label:before, input[type="radio"]:checked + lab
 .multipleAccounts-delete {
   width: 8em;
 }
+
+#main input[type="text"].error {
+  border-color: #762206;
+}
